Hopefully fixed responsive ui on mobile phones

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ html {
 h1 {
 	color: whitesmoke;
 	font-size: 10rem;
+
 }
 
 
@@ -39,22 +40,29 @@ h1 {
 }
 
 .container {
-	margin-left: 10px;
-	margin-right: 10px;
+  margin: 0px;
+}
+@media screen and (min-width: 1100px) {
+  h1 {
+    font-size: 11.5vw;
+  }
+  .btn-primary {
+    font-size: 11.5vw;
+  }
 }
 @media screen and (max-width: 1099px) {
   h1 {
-  	font-size: 9.8rem;
+  	font-size: 11.8rem;
   }
-  .btn-xl {
-  	font-size: 9.8rem;
+  .btn-primary {
+  	font-size: 10.8rem;
   }
 }
 @media screen and (max-width: 999px) {
   h1 {
   	font-size: 8.3rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 8.3rem;
   }
 }
@@ -62,7 +70,7 @@ h1 {
   h1 {
   	font-size: 8.2rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 8.2rem;
   }
 }
@@ -70,7 +78,7 @@ h1 {
   h1 {
   	font-size: 7.7rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 7.7rem;
   }
 }
@@ -78,7 +86,7 @@ h1 {
   h1 {
   	font-size: 7rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 7rem;
   }
 }
@@ -86,7 +94,7 @@ h1 {
   h1 {
   	font-size: 6.8rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 6.8rem;
   }
 }
@@ -94,24 +102,33 @@ h1 {
   h1 {
   	font-size: 6.4rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 6.4rem;
+  }
+}
+@media screen and (max-width: 430px) {
+  h1 {
+    font-size: 6.4rem;
+  }
+  .btn-primary {
+    font-size: 5rem;
+    font-weight: 600;
   }
 }
 @media screen and (max-width: 399px) {
   h1 {
-  	font-size: 4.8rem;
+  	font-size: 6.1rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 4.8rem;
+    font-weight: 600;
   }
 }
 @media screen and (max-width: 299px) {
   h1 {
   	font-size: 4.2rem;
   }
-  .btn-xl {
+  .btn-primary {
   	font-size: 4.2rem;
   }
 }
-
